Fixed Wedge Color Contrast

--- a/src/pages/about_page/description/Description.css
+++ b/src/pages/about_page/description/Description.css
@@ -32,7 +32,7 @@
     width: 100vw;
     height: var(--wedge-height);
 
-    background: linear-gradient(145deg, var(--bg-t-color-1), var(--bg-t-color-2));
+    background: linear-gradient(90deg, var(--bg-t-color-1), var(--bg-t-color-2));
     clip-path: polygon(0 0, 100% 100%, 100% 100%, 0% 100%);
 }
 
@@ -47,7 +47,7 @@
     width: 100vw;
     height: var(--wedge-height);
 
-    background: linear-gradient(145deg, var(--bg-t-color-1), var(--bg-t-color-2));
+    background: linear-gradient(90deg, var(--bg-t-color-1), var(--bg-t-color-2));
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 0%);
 }
 
