--- a/src/pages/about_page/timeline/card/Card.css
+++ b/src/pages/about_page/timeline/card/Card.css
@@ -44,7 +44,7 @@
 
     width: 100%;
 
-    background: linear-gradient(145deg, var(--bg-b-color-1), var(--bg-b-color-2));
+    background: linear-gradient(90deg, var(--bg-b-color-1), var(--bg-b-color-2));
 }
 
 .timeline-card-container:nth-child(3n) > .timeline-card::before {
